# bmxp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
bmxp/: __init__.py
bmxp/blueshift/: __init__.py  blueshift_example.py  readme.md
bmxp/chroma/: __init__.py  accessions.py  base64.h  full_test.py  main.c  main.py  main_dataclasses.py  miniz.c  mzml_parser.py  numpress.c  parsefinnigan.c  parsemzml.c  rawfile.c  rawfilereader.macos.aarch64.dylib  rawfilereader.macos.x86_64.dylib  readme.md
bmxp/eclipse/: __init__.py  eclipse_example.py  readme.md
bmxp/formation/: __init__.py  formation_plots.py  readme.md
bmxp/gravity/: __init__.py  correlation.c  correlation.macos.aarch64.dylib  correlation.macos.x86_64.dylib  fallback.py  gravity_example.py  readme.md
tests/: 1_non_clique.pickle  DCinfo1.csv  DCinfo2.csv  DCinput1.csv  DCinput2.csv  DS1.csv  DS2.csv  DS3.csv  DS4.csv  all_cliques.pickle  blueshift.pickle  example1.csv  full_cliques.pickle  make_pickle.py  mseclipse.pickle  ranked_cliques.pickle  test1.csv  test2.csv  test3.csv  test_blueshift.py  test_gravity.csv  test_gravity.py  test_mseclipse.py
